Cleanup chapter nine code.